Update to JDK 11.